fix container not being middle-alignned

--- a/home.css
+++ b/home.css
@@ -55,7 +55,6 @@ body {
 }
 
 .container {
-  display: table-cell;
   padding: 1em;
   text-align: center;
   vertical-align: middle;
